Fix friend name overflow on safari

--- a/view/src/component/friendSelector.css
+++ b/view/src/component/friendSelector.css
@@ -73,6 +73,7 @@
 #friend-selector > .friend > .friend-option {
 	float: right;
 	line-height: 60px;
+	width: 20px;
 	margin: 0px 10px;
 }
 #friend-selector > .friend > .friend-option > button {
